<resources>
    <string name="app_name">Notes</string>
    <string name="default_web_client_id">804951612766-cs5k21sc4l9olndvovls1jce282vc5c2.apps.googleusercontent.com</string>
    <string name="description">Description</string>
    <string name="note_title">Note Title</string>
    <string name="save_data">Save Notes</string>
    <string name="show_data">Show Notes</string>
    <string name="add_note">Add Note</string>
    <string name="title">title</string>
    <string name="click_here">click_here</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="already_have_account">already have account</string>
    <string name="forgot_password">forgot password</string>
    <string name="continue_with_google">continue with google</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">don\'t have account</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="not_found">not found</string>
    <string name="add_notes">add notes</string>
    <string name="failed_to_read_data_from_firebase">Failed to read data from Firebase.</string>
    <string name="record_deleted_successfully">Record deleted successfully</string>
    <string name="failed_to_delete_record">Failed to delete record</string>
    <string name="record_updated_successfully">Record Updated successfully</string>
    <string name="failed_to_updated_record">Failed to Updated record</string>
    <string name="mmm_dd_yyyy_hh_mm_a">MMM dd, yyyy - hh:mm a</string>
    <string name="added_successfully">Added Successfully</string>
    <string name="enter_note_title">enter note title</string>
    <string name="enter_note_description">enter note description</string>
    <string name="mmm_dd_yyyy_hh_mm_a_">MMM dd, yyyy - hh:mm a</string>
    <string name="failed">Failed!</string>
    <string name="login_successful">login successful</string>
    <string name="login_failed">login Failed</string>
    <string name="failed_">Failed</string>
    <string name="login_successfully">login successfully</string>
    <string name="failed__">failed</string>
    <string name="success">success</string>
    <string name="update_note">Update Note</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
</resources>