<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".activities.Registration"
        tools:ignore="ScrollViewSize">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="287dp"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">


            <EditText
                android:id="@+id/edFirstName"
                android:layout_width="300sp"
                android:layout_height="0dp"
                android:layout_marginBottom="102dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/register1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edFirstName"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/register1"
                style="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_width="300sp"
                android:layout_height="0dp"
                android:layout_marginBottom="97dp"
                android:background="@drawable/custom_input"
                android:backgroundTint="#4CAF50"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edFirstName"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/already_have_account"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/click"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/click"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="44dp"
                android:background="#B5FFFFFF"
                android:text="@string/click_here"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                tools:ignore="RtlHardcoded,VisualLintOverlap,TextSizeCheck" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="220dp"
                android:foregroundGravity="center_horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation_lm3ei99b" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Let's Register"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="HardcodedText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

